--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "dzun-space",
+  "name": "dzunn.com",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,23 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "11",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "11",
-    "framer-motion": "5",
-    "next": "12.1.0",
-    "next-seo": "^4.28.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.7",
-    "@types/react": "17.0.38",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
+    "esbuild": "^0.17.16",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.11.2",
+    "mdx-bundler": "^9.2.1",
+    "next": "13.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.0.4"
   }
 }
