--- a/package.json
+++ b/package.json
@@ -19,10 +19,30 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.2",
+    "github-slugger": "^2.0.0",
+    "gray-matter": "^4.0.3",
+    "image-size": "^1.0.2",
+    "js-yaml": "^4.1.0",
+    "mdast-util-to-string": "^3.2.0",
     "mdx-bundler": "^9.2.1",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-icons": "^4.8.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-citation": "^1.0.1",
+    "rehype-katex": "^6.0.2",
+    "rehype-preset-minify": "^6.0.0",
+    "rehype-prism-plus": "^1.5.1",
+    "rehype-slug": "^5.1.0",
+    "remark-footnotes": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "typescript": "5.0.4",
+    "unist-util-visit": "^4.1.2"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.5"
   }
 }
