--- a/package.json
+++ b/package.json
@@ -15,13 +15,30 @@
     "@types/node": "18.16.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
+    "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
     "next": "13.3.1",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
+    "rehype": "^12.0.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-pretty-code": "^0.9.8",
+    "rehype-prism-plus": "^1.5.1",
+    "rehype-slug": "^5.1.0",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-capitalize": "^1.1.0",
+    "remark-slug": "^7.0.1",
+    "shiki": "^0.14.2",
+    "timeago.js": "^4.0.2",
     "typescript": "5.0.4",
+    "unist-util-visit": "^4.1.2",
     "use-sound": "^4.0.1"
   }
 }
